// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`children should match snapshot 1`] = `
.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
}

.c2::-webkit-input-placeholder {
  color: inherit;
  opacity: 0.54;
}

.c3 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  max-width: 100%;
}

.c1 {
  color: hsl(0,0%,16%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
}

.c1.fi-radio-button .fi-radio-button_hintText {
  display: block;
  padding-left: 26px;
  color: hsl(202,7%,40%);
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c1.fi-radio-button .fi-radio-button_input {
  opacity: 0;
  position: absolute;
  margin: 8px 0 0 3px;
}

.c1.fi-radio-button .fi-radio-button_input + .fi-radio-button_label {
  position: relative;
  display: inline-block;
  cursor: pointer;
  min-height: 27px;
  line-height: 1.5em;
  padding-left: 26px;
}

.c1.fi-radio-button .fi-radio-button_input + .fi-radio-button_label::before {
  content: '';
  position: absolute;
  display: inline-block;
  left: 0;
  top: 5px;
  width: 16px;
  height: 16px;
  border-radius: 50%;
  border: 1px solid hsl(202,7%,67%);
  background: transparent;
}

.c1.fi-radio-button .fi-radio-button_input + .fi-radio-button_label::after {
  content: '';
  position: absolute;
  display: inline-block;
  left: 5px;
  top: 10px;
  border-radius: 50%;
  width: 8px;
  height: 8px;
}

.c1.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_label:before {
  border: 1px solid hsl(212,63%,45%);
}

.c1.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_label:after {
  background: hsl(212,63%,45%);
}

.c1.fi-radio-button .fi-radio-button_input:focus + .fi-radio-button_label::before {
  outline: 0;
  border-radius: 2px;
  box-shadow: 0 0 0 2px hsl(196,77%,55%);
  border-radius: 50%;
}

.c1.fi-radio-button .fi-radio-button_input:focus + .fi-radio-button_label::before:not(:focus-within) {
  box-shadow: none;
}

.c1.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label {
  cursor: not-allowed;
  color: hsl(202,7%,67%);
}

.c1.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label:before {
  border: 1px solid hsl(202,7%,80%);
  background: hsl(202,7%,97%);
}

.c1.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label:after {
  background: hsl(202,7%,97%);
  width: 16px;
  height: 16px;
  top: 6px;
  left: 1px;
}

.c1.fi-radio-button .fi-radio-button_input:disabled:checked + .fi-radio-button_label:after {
  background: hsl(202,7%,67%);
  width: 8px;
  height: 8px;
  top: 10px;
  left: 5px;
}

.c1.fi-radio-button--disabled .fi-radio-button_hintText {
  color: hsl(202,7%,67%);
}

.c1.fi-radio-button--large .fi-radio-button_hintText {
  padding-left: 40px;
}

.c1.fi-radio-button--large .fi-radio-button_input {
  margin: 10px 0 0 9px;
}

.c1.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label {
  padding-left: 40px;
  padding-top: 2px;
  min-height: 34px;
}

.c1.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label::before {
  left: 0px;
  top: 2px;
  width: 28px;
  height: 28px;
}

.c1.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label::after {
  left: 7px;
  top: 9px;
  width: 16px;
  height: 16px;
}

.c1.fi-radio-button--large .fi-radio-button_input:disabled + .fi-radio-button_label:after {
  width: 28px;
  height: 28px;
  top: 3px;
  left: 1px;
}

.c1.fi-radio-button--large .fi-radio-button_input:disabled:checked + .fi-radio-button_label:after {
  background: hsl(202,7%,67%);
  width: 16px;
  height: 16px;
  top: 9px;
  left: 7px;
}

<div>
  <div
    class="c0 fi-radio-button_container fi-radio-button c1"
  >
    <input
      class="c2 fi-radio-button_input"
      id="test-id"
      type="radio"
      value="value"
    />
    <label
      class="c3 fi-radio-button_label"
      for="test-id"
    >
      Option 1
    </label>
  </div>
</div>
`;

exports[`className should match snapshot 1`] = `
.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
}

.c2::-webkit-input-placeholder {
  color: inherit;
  opacity: 0.54;
}

.c3 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  max-width: 100%;
}

.c1 {
  color: hsl(0,0%,16%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
}

.c1.fi-radio-button .fi-radio-button_hintText {
  display: block;
  padding-left: 26px;
  color: hsl(202,7%,40%);
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c1.fi-radio-button .fi-radio-button_input {
  opacity: 0;
  position: absolute;
  margin: 8px 0 0 3px;
}

.c1.fi-radio-button .fi-radio-button_input + .fi-radio-button_label {
  position: relative;
  display: inline-block;
  cursor: pointer;
  min-height: 27px;
  line-height: 1.5em;
  padding-left: 26px;
}

.c1.fi-radio-button .fi-radio-button_input + .fi-radio-button_label::before {
  content: '';
  position: absolute;
  display: inline-block;
  left: 0;
  top: 5px;
  width: 16px;
  height: 16px;
  border-radius: 50%;
  border: 1px solid hsl(202,7%,67%);
  background: transparent;
}

.c1.fi-radio-button .fi-radio-button_input + .fi-radio-button_label::after {
  content: '';
  position: absolute;
  display: inline-block;
  left: 5px;
  top: 10px;
  border-radius: 50%;
  width: 8px;
  height: 8px;
}

.c1.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_label:before {
  border: 1px solid hsl(212,63%,45%);
}

.c1.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_label:after {
  background: hsl(212,63%,45%);
}

.c1.fi-radio-button .fi-radio-button_input:focus + .fi-radio-button_label::before {
  outline: 0;
  border-radius: 2px;
  box-shadow: 0 0 0 2px hsl(196,77%,55%);
  border-radius: 50%;
}

.c1.fi-radio-button .fi-radio-button_input:focus + .fi-radio-button_label::before:not(:focus-within) {
  box-shadow: none;
}

.c1.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label {
  cursor: not-allowed;
  color: hsl(202,7%,67%);
}

.c1.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label:before {
  border: 1px solid hsl(202,7%,80%);
  background: hsl(202,7%,97%);
}

.c1.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label:after {
  background: hsl(202,7%,97%);
  width: 16px;
  height: 16px;
  top: 6px;
  left: 1px;
}

.c1.fi-radio-button .fi-radio-button_input:disabled:checked + .fi-radio-button_label:after {
  background: hsl(202,7%,67%);
  width: 8px;
  height: 8px;
  top: 10px;
  left: 5px;
}

.c1.fi-radio-button--disabled .fi-radio-button_hintText {
  color: hsl(202,7%,67%);
}

.c1.fi-radio-button--large .fi-radio-button_hintText {
  padding-left: 40px;
}

.c1.fi-radio-button--large .fi-radio-button_input {
  margin: 10px 0 0 9px;
}

.c1.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label {
  padding-left: 40px;
  padding-top: 2px;
  min-height: 34px;
}

.c1.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label::before {
  left: 0px;
  top: 2px;
  width: 28px;
  height: 28px;
}

.c1.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label::after {
  left: 7px;
  top: 9px;
  width: 16px;
  height: 16px;
}

.c1.fi-radio-button--large .fi-radio-button_input:disabled + .fi-radio-button_label:after {
  width: 28px;
  height: 28px;
  top: 3px;
  left: 1px;
}

.c1.fi-radio-button--large .fi-radio-button_input:disabled:checked + .fi-radio-button_label:after {
  background: hsl(202,7%,67%);
  width: 16px;
  height: 16px;
  top: 9px;
  left: 7px;
}

<div>
  <div
    class="c0 fi-radio-button_container fi-radio-button c1 custom-className"
  >
    <input
      class="c2 fi-radio-button_input"
      id="test-id"
      type="radio"
      value="value"
    />
    <label
      class="c3 fi-radio-button_label"
      for="test-id"
    >
      Label text here
    </label>
  </div>
</div>
`;

exports[`disabled should match snapshot 1`] = `
.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
}

.c2::-webkit-input-placeholder {
  color: inherit;
  opacity: 0.54;
}

.c3 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  max-width: 100%;
}

.c1 {
  color: hsl(0,0%,16%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
}

.c1.fi-radio-button .fi-radio-button_hintText {
  display: block;
  padding-left: 26px;
  color: hsl(202,7%,40%);
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c1.fi-radio-button .fi-radio-button_input {
  opacity: 0;
  position: absolute;
  margin: 8px 0 0 3px;
}

.c1.fi-radio-button .fi-radio-button_input + .fi-radio-button_label {
  position: relative;
  display: inline-block;
  cursor: pointer;
  min-height: 27px;
  line-height: 1.5em;
  padding-left: 26px;
}

.c1.fi-radio-button .fi-radio-button_input + .fi-radio-button_label::before {
  content: '';
  position: absolute;
  display: inline-block;
  left: 0;
  top: 5px;
  width: 16px;
  height: 16px;
  border-radius: 50%;
  border: 1px solid hsl(202,7%,67%);
  background: transparent;
}

.c1.fi-radio-button .fi-radio-button_input + .fi-radio-button_label::after {
  content: '';
  position: absolute;
  display: inline-block;
  left: 5px;
  top: 10px;
  border-radius: 50%;
  width: 8px;
  height: 8px;
}

.c1.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_label:before {
  border: 1px solid hsl(212,63%,45%);
}

.c1.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_label:after {
  background: hsl(212,63%,45%);
}

.c1.fi-radio-button .fi-radio-button_input:focus + .fi-radio-button_label::before {
  outline: 0;
  border-radius: 2px;
  box-shadow: 0 0 0 2px hsl(196,77%,55%);
  border-radius: 50%;
}

.c1.fi-radio-button .fi-radio-button_input:focus + .fi-radio-button_label::before:not(:focus-within) {
  box-shadow: none;
}

.c1.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label {
  cursor: not-allowed;
  color: hsl(202,7%,67%);
}

.c1.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label:before {
  border: 1px solid hsl(202,7%,80%);
  background: hsl(202,7%,97%);
}

.c1.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label:after {
  background: hsl(202,7%,97%);
  width: 16px;
  height: 16px;
  top: 6px;
  left: 1px;
}

.c1.fi-radio-button .fi-radio-button_input:disabled:checked + .fi-radio-button_label:after {
  background: hsl(202,7%,67%);
  width: 8px;
  height: 8px;
  top: 10px;
  left: 5px;
}

.c1.fi-radio-button--disabled .fi-radio-button_hintText {
  color: hsl(202,7%,67%);
}

.c1.fi-radio-button--large .fi-radio-button_hintText {
  padding-left: 40px;
}

.c1.fi-radio-button--large .fi-radio-button_input {
  margin: 10px 0 0 9px;
}

.c1.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label {
  padding-left: 40px;
  padding-top: 2px;
  min-height: 34px;
}

.c1.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label::before {
  left: 0px;
  top: 2px;
  width: 28px;
  height: 28px;
}

.c1.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label::after {
  left: 7px;
  top: 9px;
  width: 16px;
  height: 16px;
}

.c1.fi-radio-button--large .fi-radio-button_input:disabled + .fi-radio-button_label:after {
  width: 28px;
  height: 28px;
  top: 3px;
  left: 1px;
}

.c1.fi-radio-button--large .fi-radio-button_input:disabled:checked + .fi-radio-button_label:after {
  background: hsl(202,7%,67%);
  width: 16px;
  height: 16px;
  top: 9px;
  left: 7px;
}

<div>
  <div
    class="c0 fi-radio-button_container fi-radio-button c1 fi-radio-button--disabled"
  >
    <input
      class="c2 fi-radio-button_input"
      disabled=""
      id="test-id"
      type="radio"
      value="value"
    />
    <label
      class="c3 fi-radio-button_label"
      for="test-id"
    >
      Label text here
    </label>
  </div>
</div>
`;

exports[`hintText should match snapshot 1`] = `
.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
}

.c2::-webkit-input-placeholder {
  color: inherit;
  opacity: 0.54;
}

.c3 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  max-width: 100%;
}

.c4 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c1 {
  color: hsl(0,0%,16%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
}

.c1.fi-radio-button .fi-radio-button_hintText {
  display: block;
  padding-left: 26px;
  color: hsl(202,7%,40%);
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c1.fi-radio-button .fi-radio-button_input {
  opacity: 0;
  position: absolute;
  margin: 8px 0 0 3px;
}

.c1.fi-radio-button .fi-radio-button_input + .fi-radio-button_label {
  position: relative;
  display: inline-block;
  cursor: pointer;
  min-height: 27px;
  line-height: 1.5em;
  padding-left: 26px;
}

.c1.fi-radio-button .fi-radio-button_input + .fi-radio-button_label::before {
  content: '';
  position: absolute;
  display: inline-block;
  left: 0;
  top: 5px;
  width: 16px;
  height: 16px;
  border-radius: 50%;
  border: 1px solid hsl(202,7%,67%);
  background: transparent;
}

.c1.fi-radio-button .fi-radio-button_input + .fi-radio-button_label::after {
  content: '';
  position: absolute;
  display: inline-block;
  left: 5px;
  top: 10px;
  border-radius: 50%;
  width: 8px;
  height: 8px;
}

.c1.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_label:before {
  border: 1px solid hsl(212,63%,45%);
}

.c1.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_label:after {
  background: hsl(212,63%,45%);
}

.c1.fi-radio-button .fi-radio-button_input:focus + .fi-radio-button_label::before {
  outline: 0;
  border-radius: 2px;
  box-shadow: 0 0 0 2px hsl(196,77%,55%);
  border-radius: 50%;
}

.c1.fi-radio-button .fi-radio-button_input:focus + .fi-radio-button_label::before:not(:focus-within) {
  box-shadow: none;
}

.c1.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label {
  cursor: not-allowed;
  color: hsl(202,7%,67%);
}

.c1.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label:before {
  border: 1px solid hsl(202,7%,80%);
  background: hsl(202,7%,97%);
}

.c1.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label:after {
  background: hsl(202,7%,97%);
  width: 16px;
  height: 16px;
  top: 6px;
  left: 1px;
}

.c1.fi-radio-button .fi-radio-button_input:disabled:checked + .fi-radio-button_label:after {
  background: hsl(202,7%,67%);
  width: 8px;
  height: 8px;
  top: 10px;
  left: 5px;
}

.c1.fi-radio-button--disabled .fi-radio-button_hintText {
  color: hsl(202,7%,67%);
}

.c1.fi-radio-button--large .fi-radio-button_hintText {
  padding-left: 40px;
}

.c1.fi-radio-button--large .fi-radio-button_input {
  margin: 10px 0 0 9px;
}

.c1.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label {
  padding-left: 40px;
  padding-top: 2px;
  min-height: 34px;
}

.c1.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label::before {
  left: 0px;
  top: 2px;
  width: 28px;
  height: 28px;
}

.c1.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label::after {
  left: 7px;
  top: 9px;
  width: 16px;
  height: 16px;
}

.c1.fi-radio-button--large .fi-radio-button_input:disabled + .fi-radio-button_label:after {
  width: 28px;
  height: 28px;
  top: 3px;
  left: 1px;
}

.c1.fi-radio-button--large .fi-radio-button_input:disabled:checked + .fi-radio-button_label:after {
  background: hsl(202,7%,67%);
  width: 16px;
  height: 16px;
  top: 9px;
  left: 7px;
}

<div>
  <div
    class="c0 fi-radio-button_container fi-radio-button c1"
  >
    <input
      aria-describedby="test-id-hintText"
      class="c2 fi-radio-button_input"
      id="test-id"
      type="radio"
      value="value"
    />
    <label
      class="c3 fi-radio-button_label"
      for="test-id"
    >
      Label text here
    </label>
    <span
      class="c4 fi-radio-button_hintText"
      id="test-id-hintText"
    >
      Example hint text
    </span>
  </div>
</div>
`;

exports[`id should match snapshot 1`] = `
.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
}

.c2::-webkit-input-placeholder {
  color: inherit;
  opacity: 0.54;
}

.c3 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  max-width: 100%;
}

.c1 {
  color: hsl(0,0%,16%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
}

.c1.fi-radio-button .fi-radio-button_hintText {
  display: block;
  padding-left: 26px;
  color: hsl(202,7%,40%);
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c1.fi-radio-button .fi-radio-button_input {
  opacity: 0;
  position: absolute;
  margin: 8px 0 0 3px;
}

.c1.fi-radio-button .fi-radio-button_input + .fi-radio-button_label {
  position: relative;
  display: inline-block;
  cursor: pointer;
  min-height: 27px;
  line-height: 1.5em;
  padding-left: 26px;
}

.c1.fi-radio-button .fi-radio-button_input + .fi-radio-button_label::before {
  content: '';
  position: absolute;
  display: inline-block;
  left: 0;
  top: 5px;
  width: 16px;
  height: 16px;
  border-radius: 50%;
  border: 1px solid hsl(202,7%,67%);
  background: transparent;
}

.c1.fi-radio-button .fi-radio-button_input + .fi-radio-button_label::after {
  content: '';
  position: absolute;
  display: inline-block;
  left: 5px;
  top: 10px;
  border-radius: 50%;
  width: 8px;
  height: 8px;
}

.c1.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_label:before {
  border: 1px solid hsl(212,63%,45%);
}

.c1.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_label:after {
  background: hsl(212,63%,45%);
}

.c1.fi-radio-button .fi-radio-button_input:focus + .fi-radio-button_label::before {
  outline: 0;
  border-radius: 2px;
  box-shadow: 0 0 0 2px hsl(196,77%,55%);
  border-radius: 50%;
}

.c1.fi-radio-button .fi-radio-button_input:focus + .fi-radio-button_label::before:not(:focus-within) {
  box-shadow: none;
}

.c1.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label {
  cursor: not-allowed;
  color: hsl(202,7%,67%);
}

.c1.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label:before {
  border: 1px solid hsl(202,7%,80%);
  background: hsl(202,7%,97%);
}

.c1.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label:after {
  background: hsl(202,7%,97%);
  width: 16px;
  height: 16px;
  top: 6px;
  left: 1px;
}

.c1.fi-radio-button .fi-radio-button_input:disabled:checked + .fi-radio-button_label:after {
  background: hsl(202,7%,67%);
  width: 8px;
  height: 8px;
  top: 10px;
  left: 5px;
}

.c1.fi-radio-button--disabled .fi-radio-button_hintText {
  color: hsl(202,7%,67%);
}

.c1.fi-radio-button--large .fi-radio-button_hintText {
  padding-left: 40px;
}

.c1.fi-radio-button--large .fi-radio-button_input {
  margin: 10px 0 0 9px;
}

.c1.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label {
  padding-left: 40px;
  padding-top: 2px;
  min-height: 34px;
}

.c1.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label::before {
  left: 0px;
  top: 2px;
  width: 28px;
  height: 28px;
}

.c1.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label::after {
  left: 7px;
  top: 9px;
  width: 16px;
  height: 16px;
}

.c1.fi-radio-button--large .fi-radio-button_input:disabled + .fi-radio-button_label:after {
  width: 28px;
  height: 28px;
  top: 3px;
  left: 1px;
}

.c1.fi-radio-button--large .fi-radio-button_input:disabled:checked + .fi-radio-button_label:after {
  background: hsl(202,7%,67%);
  width: 16px;
  height: 16px;
  top: 9px;
  left: 7px;
}

<div>
  <div
    class="c0 fi-radio-button_container fi-radio-button c1"
  >
    <input
      class="c2 fi-radio-button_input"
      id="good-id"
      type="radio"
      value="value"
    />
    <label
      class="c3 fi-radio-button_label"
      for="good-id"
    >
      Label text here
    </label>
  </div>
</div>
`;

exports[`name should match snapshot 1`] = `
.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
}

.c2::-webkit-input-placeholder {
  color: inherit;
  opacity: 0.54;
}

.c3 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  max-width: 100%;
}

.c1 {
  color: hsl(0,0%,16%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
}

.c1.fi-radio-button .fi-radio-button_hintText {
  display: block;
  padding-left: 26px;
  color: hsl(202,7%,40%);
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c1.fi-radio-button .fi-radio-button_input {
  opacity: 0;
  position: absolute;
  margin: 8px 0 0 3px;
}

.c1.fi-radio-button .fi-radio-button_input + .fi-radio-button_label {
  position: relative;
  display: inline-block;
  cursor: pointer;
  min-height: 27px;
  line-height: 1.5em;
  padding-left: 26px;
}

.c1.fi-radio-button .fi-radio-button_input + .fi-radio-button_label::before {
  content: '';
  position: absolute;
  display: inline-block;
  left: 0;
  top: 5px;
  width: 16px;
  height: 16px;
  border-radius: 50%;
  border: 1px solid hsl(202,7%,67%);
  background: transparent;
}

.c1.fi-radio-button .fi-radio-button_input + .fi-radio-button_label::after {
  content: '';
  position: absolute;
  display: inline-block;
  left: 5px;
  top: 10px;
  border-radius: 50%;
  width: 8px;
  height: 8px;
}

.c1.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_label:before {
  border: 1px solid hsl(212,63%,45%);
}

.c1.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_label:after {
  background: hsl(212,63%,45%);
}

.c1.fi-radio-button .fi-radio-button_input:focus + .fi-radio-button_label::before {
  outline: 0;
  border-radius: 2px;
  box-shadow: 0 0 0 2px hsl(196,77%,55%);
  border-radius: 50%;
}

.c1.fi-radio-button .fi-radio-button_input:focus + .fi-radio-button_label::before:not(:focus-within) {
  box-shadow: none;
}

.c1.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label {
  cursor: not-allowed;
  color: hsl(202,7%,67%);
}

.c1.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label:before {
  border: 1px solid hsl(202,7%,80%);
  background: hsl(202,7%,97%);
}

.c1.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label:after {
  background: hsl(202,7%,97%);
  width: 16px;
  height: 16px;
  top: 6px;
  left: 1px;
}

.c1.fi-radio-button .fi-radio-button_input:disabled:checked + .fi-radio-button_label:after {
  background: hsl(202,7%,67%);
  width: 8px;
  height: 8px;
  top: 10px;
  left: 5px;
}

.c1.fi-radio-button--disabled .fi-radio-button_hintText {
  color: hsl(202,7%,67%);
}

.c1.fi-radio-button--large .fi-radio-button_hintText {
  padding-left: 40px;
}

.c1.fi-radio-button--large .fi-radio-button_input {
  margin: 10px 0 0 9px;
}

.c1.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label {
  padding-left: 40px;
  padding-top: 2px;
  min-height: 34px;
}

.c1.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label::before {
  left: 0px;
  top: 2px;
  width: 28px;
  height: 28px;
}

.c1.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label::after {
  left: 7px;
  top: 9px;
  width: 16px;
  height: 16px;
}

.c1.fi-radio-button--large .fi-radio-button_input:disabled + .fi-radio-button_label:after {
  width: 28px;
  height: 28px;
  top: 3px;
  left: 1px;
}

.c1.fi-radio-button--large .fi-radio-button_input:disabled:checked + .fi-radio-button_label:after {
  background: hsl(202,7%,67%);
  width: 16px;
  height: 16px;
  top: 9px;
  left: 7px;
}

<div>
  <div
    class="c0 fi-radio-button_container fi-radio-button c1"
  >
    <input
      class="c2 fi-radio-button_input"
      id="test-id"
      name="group-name"
      type="radio"
      value="value"
    />
    <label
      class="c3 fi-radio-button_label"
      for="test-id"
    >
      Label text here
    </label>
  </div>
</div>
`;

exports[`value should match snapshot 1`] = `
.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
}

.c2::-webkit-input-placeholder {
  color: inherit;
  opacity: 0.54;
}

.c3 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  max-width: 100%;
}

.c1 {
  color: hsl(0,0%,16%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
}

.c1.fi-radio-button .fi-radio-button_hintText {
  display: block;
  padding-left: 26px;
  color: hsl(202,7%,40%);
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c1.fi-radio-button .fi-radio-button_input {
  opacity: 0;
  position: absolute;
  margin: 8px 0 0 3px;
}

.c1.fi-radio-button .fi-radio-button_input + .fi-radio-button_label {
  position: relative;
  display: inline-block;
  cursor: pointer;
  min-height: 27px;
  line-height: 1.5em;
  padding-left: 26px;
}

.c1.fi-radio-button .fi-radio-button_input + .fi-radio-button_label::before {
  content: '';
  position: absolute;
  display: inline-block;
  left: 0;
  top: 5px;
  width: 16px;
  height: 16px;
  border-radius: 50%;
  border: 1px solid hsl(202,7%,67%);
  background: transparent;
}

.c1.fi-radio-button .fi-radio-button_input + .fi-radio-button_label::after {
  content: '';
  position: absolute;
  display: inline-block;
  left: 5px;
  top: 10px;
  border-radius: 50%;
  width: 8px;
  height: 8px;
}

.c1.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_label:before {
  border: 1px solid hsl(212,63%,45%);
}

.c1.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_label:after {
  background: hsl(212,63%,45%);
}

.c1.fi-radio-button .fi-radio-button_input:focus + .fi-radio-button_label::before {
  outline: 0;
  border-radius: 2px;
  box-shadow: 0 0 0 2px hsl(196,77%,55%);
  border-radius: 50%;
}

.c1.fi-radio-button .fi-radio-button_input:focus + .fi-radio-button_label::before:not(:focus-within) {
  box-shadow: none;
}

.c1.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label {
  cursor: not-allowed;
  color: hsl(202,7%,67%);
}

.c1.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label:before {
  border: 1px solid hsl(202,7%,80%);
  background: hsl(202,7%,97%);
}

.c1.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label:after {
  background: hsl(202,7%,97%);
  width: 16px;
  height: 16px;
  top: 6px;
  left: 1px;
}

.c1.fi-radio-button .fi-radio-button_input:disabled:checked + .fi-radio-button_label:after {
  background: hsl(202,7%,67%);
  width: 8px;
  height: 8px;
  top: 10px;
  left: 5px;
}

.c1.fi-radio-button--disabled .fi-radio-button_hintText {
  color: hsl(202,7%,67%);
}

.c1.fi-radio-button--large .fi-radio-button_hintText {
  padding-left: 40px;
}

.c1.fi-radio-button--large .fi-radio-button_input {
  margin: 10px 0 0 9px;
}

.c1.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label {
  padding-left: 40px;
  padding-top: 2px;
  min-height: 34px;
}

.c1.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label::before {
  left: 0px;
  top: 2px;
  width: 28px;
  height: 28px;
}

.c1.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label::after {
  left: 7px;
  top: 9px;
  width: 16px;
  height: 16px;
}

.c1.fi-radio-button--large .fi-radio-button_input:disabled + .fi-radio-button_label:after {
  width: 28px;
  height: 28px;
  top: 3px;
  left: 1px;
}

.c1.fi-radio-button--large .fi-radio-button_input:disabled:checked + .fi-radio-button_label:after {
  background: hsl(202,7%,67%);
  width: 16px;
  height: 16px;
  top: 9px;
  left: 7px;
}

<div>
  <div
    class="c0 fi-radio-button_container fi-radio-button c1"
  >
    <input
      class="c2 fi-radio-button_input"
      id="test-id"
      type="radio"
      value="option-value-1"
    />
    <label
      class="c3 fi-radio-button_label"
      for="test-id"
    >
      Label text here
    </label>
  </div>
</div>
`;

exports[`variant should match snapshot 1`] = `
.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
}

.c2::-webkit-input-placeholder {
  color: inherit;
  opacity: 0.54;
}

.c3 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  max-width: 100%;
}

.c1 {
  color: hsl(0,0%,16%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
}

.c1.fi-radio-button .fi-radio-button_hintText {
  display: block;
  padding-left: 26px;
  color: hsl(202,7%,40%);
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c1.fi-radio-button .fi-radio-button_input {
  opacity: 0;
  position: absolute;
  margin: 8px 0 0 3px;
}

.c1.fi-radio-button .fi-radio-button_input + .fi-radio-button_label {
  position: relative;
  display: inline-block;
  cursor: pointer;
  min-height: 27px;
  line-height: 1.5em;
  padding-left: 26px;
}

.c1.fi-radio-button .fi-radio-button_input + .fi-radio-button_label::before {
  content: '';
  position: absolute;
  display: inline-block;
  left: 0;
  top: 5px;
  width: 16px;
  height: 16px;
  border-radius: 50%;
  border: 1px solid hsl(202,7%,67%);
  background: transparent;
}

.c1.fi-radio-button .fi-radio-button_input + .fi-radio-button_label::after {
  content: '';
  position: absolute;
  display: inline-block;
  left: 5px;
  top: 10px;
  border-radius: 50%;
  width: 8px;
  height: 8px;
}

.c1.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_label:before {
  border: 1px solid hsl(212,63%,45%);
}

.c1.fi-radio-button .fi-radio-button_input:checked + .fi-radio-button_label:after {
  background: hsl(212,63%,45%);
}

.c1.fi-radio-button .fi-radio-button_input:focus + .fi-radio-button_label::before {
  outline: 0;
  border-radius: 2px;
  box-shadow: 0 0 0 2px hsl(196,77%,55%);
  border-radius: 50%;
}

.c1.fi-radio-button .fi-radio-button_input:focus + .fi-radio-button_label::before:not(:focus-within) {
  box-shadow: none;
}

.c1.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label {
  cursor: not-allowed;
  color: hsl(202,7%,67%);
}

.c1.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label:before {
  border: 1px solid hsl(202,7%,80%);
  background: hsl(202,7%,97%);
}

.c1.fi-radio-button .fi-radio-button_input:disabled + .fi-radio-button_label:after {
  background: hsl(202,7%,97%);
  width: 16px;
  height: 16px;
  top: 6px;
  left: 1px;
}

.c1.fi-radio-button .fi-radio-button_input:disabled:checked + .fi-radio-button_label:after {
  background: hsl(202,7%,67%);
  width: 8px;
  height: 8px;
  top: 10px;
  left: 5px;
}

.c1.fi-radio-button--disabled .fi-radio-button_hintText {
  color: hsl(202,7%,67%);
}

.c1.fi-radio-button--large .fi-radio-button_hintText {
  padding-left: 40px;
}

.c1.fi-radio-button--large .fi-radio-button_input {
  margin: 10px 0 0 9px;
}

.c1.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label {
  padding-left: 40px;
  padding-top: 2px;
  min-height: 34px;
}

.c1.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label::before {
  left: 0px;
  top: 2px;
  width: 28px;
  height: 28px;
}

.c1.fi-radio-button--large .fi-radio-button_input + .fi-radio-button_label::after {
  left: 7px;
  top: 9px;
  width: 16px;
  height: 16px;
}

.c1.fi-radio-button--large .fi-radio-button_input:disabled + .fi-radio-button_label:after {
  width: 28px;
  height: 28px;
  top: 3px;
  left: 1px;
}

.c1.fi-radio-button--large .fi-radio-button_input:disabled:checked + .fi-radio-button_label:after {
  background: hsl(202,7%,67%);
  width: 16px;
  height: 16px;
  top: 9px;
  left: 7px;
}

<div>
  <div
    class="c0 fi-radio-button_container fi-radio-button c1 fi-radio-button--large"
  >
    <input
      class="c2 fi-radio-button_input"
      id="test-id"
      type="radio"
      value="value"
    />
    <label
      class="c3 fi-radio-button_label"
      for="test-id"
    >
      Label text here
    </label>
  </div>
</div>
`;
